@@ -1207,16 +1207,20 @@ public class HTMLEditor extends JPanel {
 					.getAttributes();
 
 		if (charattrs
-			.containsAttribute(StyleConstants.Bold, new Boolean(true))) {
-			boldActionB.setBorder(border2);
-			bold = true;
+			.containsAttribute(StyleConstants.Bold, Boolean.valueOf(true))) {
+			try{
+				boldActionB.setBorder(border2);
+				bold = true;
+			}catch(Exception ex){
+				ex.printStackTrace();
+			}
 		} else if (bold) {
 			boldActionB.setBorder(border1);
 			bold = false;
 		}
 		boldActionB.setBorderPainted(bold);
 		if (charattrs
-			.containsAttribute(StyleConstants.Italic, new Boolean(true))) {
+			.containsAttribute(StyleConstants.Italic, Boolean.valueOf(true))) {
 			italicActionB.setBorder(border2);
 			italic = true;
 		} else if (italic) {
@@ -1225,7 +1229,7 @@ public class HTMLEditor extends JPanel {
 		}
 		italicActionB.setBorderPainted(italic);
 		if (charattrs
-			.containsAttribute(StyleConstants.Underline, new Boolean(true))) {
+			.containsAttribute(StyleConstants.Underline, Boolean.valueOf(true))) {
 			underActionB.setBorder(border2);
 			under = true;
 		} else if (under) {
@@ -1679,12 +1683,6 @@ public class HTMLEditor extends JPanel {
 		dlg.setVisible(true);
 
 		if (!dlg.CANCELLED) {
-			String parentname =
-				document
-					.getParagraphElement(editor.getCaretPosition())
-					.getParentElement()
-					.getName();
-			//HTML.Tag parentTag = HTML.getTag(parentname);
 			String urlString = dlg.fileField.getText();
 			String path = urlString;
 			if (imagesDir != null) {
@@ -2115,7 +2113,7 @@ public class HTMLEditor extends JPanel {
 		if (tda.isDefined(HTML.Attribute.COLSPAN))
 			try {
 				Integer i =
-					new Integer(
+				        Integer.valueOf(
 						tda.getAttribute(HTML.Attribute.COLSPAN).toString());
 				dlg.tdColspan.setValue(i);
 			} catch (Exception ex) {
@@ -2124,7 +2122,7 @@ public class HTMLEditor extends JPanel {
 		if (tda.isDefined(HTML.Attribute.ROWSPAN))
 			try {
 				Integer i =
-					new Integer(
+				        Integer.valueOf(
 						tda.getAttribute(HTML.Attribute.ROWSPAN).toString());
 				dlg.tdRowspan.setValue(i);
 			} catch (Exception ex) {
@@ -2189,7 +2187,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.CELLPADDING))
 			try {
 				Integer i =
-					new Integer(
+				        Integer.valueOf(
 						ta.getAttribute(HTML.Attribute.CELLPADDING).toString());
 				dlg.cellpadding.setValue(i);
 			} catch (Exception ex) {
@@ -2198,7 +2196,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.CELLSPACING))
 			try {
 				Integer i =
-					new Integer(
+				        Integer.valueOf(
 						ta.getAttribute(HTML.Attribute.CELLSPACING).toString());
 				dlg.cellspacing.setValue(i);
 			} catch (Exception ex) {
@@ -2207,7 +2205,7 @@ public class HTMLEditor extends JPanel {
 		if (ta.isDefined(HTML.Attribute.BORDER))
 			try {
 				Integer i =
-					new Integer(
+				        Integer.valueOf(
 						ta.getAttribute(HTML.Attribute.BORDER).toString());
 				dlg.border.setValue(i);
 			} catch (Exception ex) {
